# hiring-negotiation-arena

./: .gitignore  Dockerfile  README.md  all_code.txt  client.py  environment.py  fix.py  fix_bias_detector.py  inference.py  models.py  openenv.yaml  patch.py  preference_pairs.jsonl  pyproject.toml  requirements-train.txt  role_grader.py  snippet.txt  train_dpo.py  train_grpo.py
server/: app.py  bias_detector.py  environment.py  parties.py  requirements.txt  role_grader.py  solver.py  stochastic.py  task_configs.py
tests/: conftest.py  test_bias_detector.py  test_environment.py  test_integration.py  test_role_grader.py
